[package]
authors = ["Jake Goulding <jake.goulding@integer32.com>"]
name = "top-crates"
version = "0.2.0"
edition = "2021"

description = "Calculates what crates should be included in the playground"
license = "MIT OR Apache-2.0"

[dependencies]
cargo = "0.59.0"
itertools = "0.10.3"
reqwest = { version = "0.11.9", features = ["blocking"] }
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.75"
toml = "0.5.8"
globset = "0.4.8"
git2 = "0.13.25"
